Sanitizes ID strings and optimizes list processing
Replaces angle brackets in ID strings to ensure proper parsing and sanitization.

Streamlines list processing by using modern `toList` method, improving code readability and efficiency.

Fixes potential null checks in `expandUser` logic to enhance robustness.